--- a/pipeline.toml
+++ b/pipeline.toml
@@ -1,4 +1,4 @@
-dataset_root = "D:/Code/SIGS/230818_VVC/dataset/videos"
+dataset_root = "E:/Code/SIGS/230818_VVC/dataset/videos"
 ffmpeg = "C:/Program Files/ffmpeg/bin/ffmpeg.exe"
 
 [raw2png]
@@ -7,7 +7,7 @@ src_file = "./source.yuv"
 dst_dir = "./imgs/raw2png"
 
 [preprocess]
-program = "D:/Code/SIGS/230508_LVC/code/libLVC/cmake-build-release-visual-studio/apps/main_preprocess.exe"
+program = "E:/Code/SIGS/230508_LVC/code/libLVC/cmake-build-release-visual-studio/apps/main_preprocess.exe"
 param_file = "./rlc.cfg.bak"
 calibration_file = "./calibration.xml"
 temp_param_file = "./.rlc.tmp"
@@ -20,8 +20,8 @@ src_dir = "./imgs/preprocessed"
 dst_file = "./imgs/pre2yuv.yuv"
 
 [codec]
-program = "D:/Code/SIGS/230818_VVC/code/VVCSoftware_VTM/bin/ninja/msvc-19.37/x86_64/release/EncoderApp.exe"
-encode_mode_cfg_file = "D:/Code/SIGS/230818_VVC/code/VVCSoftware_VTM/cfg/encoder_intra_vtm.cfg"
+program = "E:/Code/SIGS/230818_VVC/code/VVCSoftware_VTM/bin/ninja/msvc-19.37/x86_64/release/EncoderApp.exe"
+encode_mode_cfg_file = "E:/Code/SIGS/230818_VVC/code/VVCSoftware_VTM/cfg/encoder_intra_vtm.cfg"
 param_file = "./vtm.cfg.bak"
 temp_param_file = "./.vtm.tmp"
 size_ref_img_file = "./imgs/preprocessed/001.png"
@@ -36,7 +36,7 @@ src_file_pattern = "./imgs/decoded/*.yuv"
 dst_dir_fstr = "./imgs/dec2png/{stem}"
 
 [postprocess]
-program = "D:/Code/SIGS/230508_LVC/code/libLVC/cmake-build-release-visual-studio/apps/main_postprocess.exe"
+program = "E:/Code/SIGS/230508_LVC/code/libLVC/cmake-build-release-visual-studio/apps/main_postprocess.exe"
 param_file = "./rlc.cfg.bak"
 calibration_file = "./calibration.xml"
 temp_param_file = "./.rlc.tmp"
@@ -44,7 +44,7 @@ src_dirs = "./imgs/dec2png"
 dst_dir_fstr = "./imgs/postprocessed/{qp}"
 
 [render]
-program = "D:/Code/SIGS/230508_LVC/code/rlc-master/cmake-build-release-visual-studio/apps/RLC.exe"
+program = "E:/Code/SIGS/230508_LVC/code/rlc-master/cmake-build-release-visual-studio/apps/RLC.exe"
 param_file = "./rlc.cfg.bak"
 calibration_file = "./calibration.xml"
 temp_param_file = "./.rlc.tmp"
@@ -52,7 +52,7 @@ src_dirs = "./imgs/postprocessed"
 dst_dir_fstr = "./imgs/rendered/{qp}"
 
 [baseline_render]
-program = "D:/Code/SIGS/230508_LVC/code/rlc-master/cmake-build-release-visual-studio/apps/RLC.exe"
+program = "E:/Code/SIGS/230508_LVC/code/rlc-master/cmake-build-release-visual-studio/apps/RLC.exe"
 param_file = "./rlc.cfg.bak"
 calibration_file = "./calibration.xml"
 temp_param_file = "./.rlc.tmp"
