--- a/pipeline.toml
+++ b/pipeline.toml
@@ -10,7 +10,6 @@ dst_dir = "./imgs/raw2png"
 program = "E:/Code/SIGS/230508_LVC/code/libLVC/cmake-build-release-visual-studio/apps/main_preprocess.exe"
 param_file = "./rlc.cfg.bak"
 calibration_file = "./calibration.xml"
-temp_param_file = "./.rlc.tmp"
 src_dir = "./imgs/raw2png"
 dst_dir = "./imgs/preprocessed"
 
@@ -23,12 +22,20 @@ dst_file = "./imgs/pre2yuv.yuv"
 program = "E:/Code/SIGS/230818_VVC/code/VVCSoftware_VTM/bin/ninja/msvc-19.37/x86_64/release/EncoderApp.exe"
 encode_mode_cfg_file = "E:/Code/SIGS/230818_VVC/code/VVCSoftware_VTM/cfg/encoder_intra_vtm.cfg"
 param_file = "./vtm.cfg.bak"
-temp_param_file = "./.vtm.tmp"
 size_ref_img_file = "./imgs/preprocessed/001.png"
 src_file = "./imgs/pre2yuv.yuv"
 dst_file_fstr = "./imgs/encoded/{qp}.bin"
 log_file_fstr = "./imgs/encoded/{qp}.log"
 recon_file_fstr = "./imgs/decoded/{qp}.yuv"
+
+[codec.ctcqp]
+Boxer-IrishMan-Gladiator = [37, 41, 45, 49]
+chess = [37, 41, 45, 49]
+ChessPieces = [33, 40, 45, 49]
+NagoyaDataLeading = [38, 43, 49, 51]
+NagoyaFujita = [36, 40, 45, 49]
+NagoyaOrigami = [36, 40, 45, 49]
+Tunnel_Train = [35, 40, 45, 49]
 
 [dec2png]
 size_ref_img_file = "./imgs/preprocessed/001.png"
@@ -39,7 +46,6 @@ dst_dir_fstr = "./imgs/dec2png/{stem}"
 program = "E:/Code/SIGS/230508_LVC/code/libLVC/cmake-build-release-visual-studio/apps/main_postprocess.exe"
 param_file = "./rlc.cfg.bak"
 calibration_file = "./calibration.xml"
-temp_param_file = "./.rlc.tmp"
 src_dirs = "./imgs/dec2png"
 dst_dir_fstr = "./imgs/postprocessed/{qp}"
 
@@ -47,7 +53,6 @@ dst_dir_fstr = "./imgs/postprocessed/{qp}"
 program = "E:/Code/SIGS/230508_LVC/code/rlc-master/cmake-build-release-visual-studio/apps/RLC.exe"
 param_file = "./rlc.cfg.bak"
 calibration_file = "./calibration.xml"
-temp_param_file = "./.rlc.tmp"
 src_dirs = "./imgs/postprocessed"
 dst_dir_fstr = "./imgs/rendered/{qp}"
 
@@ -55,7 +60,6 @@ dst_dir_fstr = "./imgs/rendered/{qp}"
 program = "E:/Code/SIGS/230508_LVC/code/rlc-master/cmake-build-release-visual-studio/apps/RLC.exe"
 param_file = "./rlc.cfg.bak"
 calibration_file = "./calibration.xml"
-temp_param_file = "./.rlc.tmp"
 src_dir = "./imgs/raw2png"
 dst_dir = "./imgs/rendered_baseline"
 
