feat: use node-cfg to manage frames setting

--- a/node-cfg-example.toml
+++ b/node-cfg-example.toml
@@ -1,8 +1,7 @@
+frames = 1
+
 [cases]
-vtm_types = [
-    "AI",
-    "RA"
-]
+vtm_types = ["AI", "RA"]
 seqs = [
     "Boxer-IrishMan-Gladiator",
     "chess",
@@ -14,11 +13,11 @@ seqs = [
 ]
 
 [path]
-dataset = "D:/Code/SIGS/230818_VVC/dataset"
+dataset = "D:/MPEG/MPEG144/dataset"
 
 [app]
 ffmpeg = "C:/Program Files/ffmpeg/bin/ffmpeg.exe"
-encoder = "D:/Code/SIGS/230818_VVC/code/VVCSoftware_VTM/bin/ninja/msvc-19.37/x86_64/release/EncoderApp.exe"
-preproc = "D:/code/SIGS/230508_LVC/code/libMCA/cmake-build-release-visual-studio/apps/main_preproc.exe"
-postproc = "D:/code/SIGS/230508_LVC/code/libMCA/cmake-build-release-visual-studio/apps/main_postproc.exe"
-rlc = "D:/Code/SIGS/230508_LVC/code/rlc-master/cmake-build-release-visual-studio/apps/RLC.exe"
+encoder = "D:/MPEG/MPEG144/code/VVCSoftware_VTM/bin/ninja/msvc-19.37/x86_64/release/EncoderApp.exe"
+preproc = "D:/MPEG/MPEG143/code/libMCA/cmake-build-release-visual-studio/apps/main_preproc.exe"
+postproc = "D:/MPEG/MPEG143/code/libMCA/cmake-build-release-visual-studio/apps/main_postproc.exe"
+rlc = "D:/MPEG/MPEG143/code/rlc-master/cmake-build-release-visual-studio/apps/RLC.exe"
