--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,7 @@ name = "MCA-Scripts"
 version = "0.0.0"
 description = ""
 authors = [{ name = "Starry-OvO", email = "starry.qvq@gmail.com" }]
-dependencies = [
-    'scipy',
-    'opencv-contrib-python',
-    'matplotlib',
-    "pydantic>=2.5.2",
-]
+dependencies = ["pydantic", "scipy", "opencv-contrib-python", "matplotlib"]
 requires-python = ">=3.10,<3.13"
 readme = "README.md"
 license = { text = "MIT" }
@@ -19,13 +14,13 @@ lint = ["ruff", "black"]
 [tool.black]
 line-length = 120
 skip-string-normalization = true
-target-version = ["py38", "py39", "py310", "py311", "py312"]
+target-version = ["py310", "py311", "py312"]
 
 [tool.ruff]
 line-length = 120
 select = ["W", "E", "F", "I"]
 ignore = ["E402", "E501"]
-target-version = "py38"
+target-version = "py310"
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
