--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,11 @@ __pycache__/
 build/
 *.egg-info/
 
-.pdm.toml
-.pdm-python
-
 __pypackages__/
 
 .venv
+.python-version
+*.lock
 
 .idea/
 .vscode/
