--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,19 +8,20 @@ requires-python = ">=3.10,<3.13"
 readme = "README.md"
 license = { text = "MIT" }
 
-[tool.pdm.dev-dependencies]
-lint = ["ruff", "black"]
-
-[tool.black]
-line-length = 120
-skip-string-normalization = true
-target-version = ["py310", "py311", "py312"]
+[tool.rye]
+managed = true
+virtual = true
 
 [tool.ruff]
 line-length = 120
-select = ["W", "E", "F", "I"]
-ignore = ["E402", "E501"]
 target-version = "py310"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.format]
+quote-style = "preserve"
+
+[tool.ruff.lint]
+select = ["W", "E", "F", "I", "UP", "YTT", "A", "B", "C4", "PIE", "PT", "PERF", "FURB"]
+ignore = ["E402", "E501"]
+
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
