chore: update common config

--- a/common-cfg.toml
+++ b/common-cfg.toml
@@ -16,11 +16,7 @@
 "NagoyaFujita" = [32, 36, 42, 46]
 "NagoyaOrigami" = [31, 36, 40, 45]
 "Tunnel_Train" = [30, 35, 40, 45]
-"Boys" = [
-    34,
-    37,
-    # 41, 45,
-]
+"Boys" = [34, 37, 41, 45]
 
 [default_pattern]
 "py" = "frame#{:03d}.png"
