--- a/common-cfg.toml
+++ b/common-cfg.toml
@@ -9,6 +9,9 @@ default_pattern = "frame#%03d.png"
 "NagoyaOrigami" = [34, 39, 44, 49]
 "Tunnel_Train" = [35, 40, 45, 49]
 "Boys" = [37, 41, 45, 49]
+"Cars" = [37, 41, 45, 49]
+"Experimenting" = [37, 41, 45, 49]
+"Matryoshka" = [37, 41, 45, 49]
 
 [QP.wMCA]
 "Boxer-IrishMan-Gladiator" = [33, 37, 41, 45]
@@ -19,6 +22,9 @@ default_pattern = "frame#%03d.png"
 "NagoyaOrigami" = [31, 36, 40, 45]
 "Tunnel_Train" = [30, 35, 40, 45]
 "Boys" = [34, 37, 41, 45]
+"Cars" = [34, 37, 41, 45]
+"Experimenting" = [34, 37, 41, 45]
+"Matryoshka" = [34, 37, 41, 45]
 
 [pattern]
 "Boxer-IrishMan-Gladiator" = "frame_%03d.png"
