--- a/common-cfg.toml
+++ b/common-cfg.toml
@@ -30,6 +30,8 @@ default_pattern = "frame#%03d.png"
 "Boxer-IrishMan-Gladiator" = "frame_%03d.png"
 "chess" = "frame_%03d.png"
 "ChessPieces" = "frame_%03d.png"
+"ComplexObjectMove" = "frame_%03d.png"
+"UnicornLinearCam" = "frame_%03d.png"
 "NagoyaDataLeading" = "NagoyaDataLeading_f%04d.png"
 "NagoyaFujita" = "NagoyaFujita_f%04d.png"
 "Tunnel_Train" = "Tunnel_Train_2c_f%04d.png"
@@ -37,15 +39,19 @@ default_pattern = "frame#%03d.png"
 "Cars" = "Image%d.bmp"
 "Experimenting" = "Image%03d.bmp"
 "Matryoshka" = "Image%d.bmp"
+"Tri-viewpoint" = "frame%03d.png"
 
 [start_idx]
 "Boxer-IrishMan-Gladiator" = 0
 "chess" = 0
 "ChessPieces" = 0
+"ComplexObjectMove" = 0
+"UnicornLinearCam" = 0
 "NagoyaDataLeading" = 1
 "NagoyaFujita" = 1
 "Tunnel_Train" = 0
 "Boys" = 0
 "Cars" = 21
 "Experimenting" = 0
+"Tri-viewpoint" = 0
 "Matryoshka" = 0
