--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,15 @@
 name = "MCA-Benchmark"
 version = "0.4.0"
 description = ""
-authors = [{ name = "Starry-OvO", email = "starry.qvq@gmail.com" }]
+authors = [{ name = "Zhuo Tan", email = "tz23@mails.tsinghua.edu.cn" }]
 dependencies = ["pydantic", "scipy", "opencv-python", "matplotlib"]
 requires-python = ">=3.10,<3.13"
 readme = "README.md"
 license = { text = "MIT" }
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
