--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,11 @@ license = { text = "MIT" }
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["mcahelper"]
+
 [tool.rye]
 managed = true
-virtual = true
 
 [tool.ruff]
 line-length = 120
