fix: name error in `TLCTCfg`

--- a/config-example.toml
+++ b/config-example.toml
@@ -24,6 +24,7 @@ output = "D:/MPEG/MPEG144/dataset/output"
 "UnicornLinearCam" = "UnicornLinearCam/frame_%03d.png"
 "NagoyaDataLeading" = "NagoyaDataLeading/NagoyaDataLeading_f%04d.png"
 "NagoyaFujita" = "NagoyaFujita/NagoyaFujita_f%04d.png"
+"NagoyaOrigami" = "NagoyaOrigami/NagoyaOrigami_f%04d.png"
 "Tunnel_Train" = "Tunnel_Train/Tunnel_Train_2c_f%04d.png"
 "Boys" = "Boys/Image%03d.bmp"
 "Cars" = "Cars/Image%d.bmp"
@@ -74,6 +75,7 @@ rlc = "D:/MPEG/MPEG146/code/rlc/Program/cmake-build-release/RLC30.exe"
 "UnicornLinearCam" = 0
 "NagoyaDataLeading" = 1
 "NagoyaFujita" = 1
+"NagoyaOrigami" = 1
 "Tunnel_Train" = 0
 "Boys" = 0
 "Cars" = 21
