--- a/config-example.toml
+++ b/config-example.toml
@@ -1,7 +1,5 @@
 frames = 1
 
-default_pattern = "frame#%03d.png"
-
 [cases]
 vtm_types = ["RA"]
 seqs = [
@@ -17,9 +15,6 @@ input = "D:/MPEG/MPEG144/dataset/input"
 output = "D:/MPEG/MPEG144/dataset/output"
 
 [path.pattern]
-"Boxer-IrishMan-Gladiator" = "Boxer-IrishMan-Gladiator/frame_%03d.png"
-"ChessPieces" = "ChessPieces/frame_%03d.png"
-"ChessPieces-MovingCamera" = "ChessPieces-MovingCamera/frame_%03d.png"
 "ComplexObjectMove" = "ComplexObjectMove/frame_%03d.png"
 "UnicornLinearCam" = "UnicornLinearCam/frame_%03d.png"
 "NagoyaDataLeading" = "NagoyaDataLeading/NagoyaDataLeading_f%04d.png"
@@ -31,46 +26,40 @@ output = "D:/MPEG/MPEG144/dataset/output"
 "Experimenting" = "Experimenting/Image%03d.bmp"
 "Matryoshka" = "Matryoshka/Image%d.bmp"
 "Tri-viewpoint" = "Tri-viewpoint/frame%03d.png"
+"Motherboard" = "Motherboard/img_%03d.bmp"
 
 [app]
-ffmpeg = "C:/Program Files/ffmpeg/bin/ffmpeg.exe"
-encoder = "D:/MPEG/MPEG144/code/VVCSoftware_VTM/bin/ninja/msvc-19.37/x86_64/release/EncoderApp.exe"
-preproc = "D:/MPEG/MPEG143/code/MCA/cmake-build-release/src/bin/mca-preproc.exe"
-postproc = "D:/MPEG/MPEG143/code/MCA/cmake-build-release/src/bin/mca-postproc.exe"
-rlc = "D:/MPEG/MPEG146/code/rlc/Program/cmake-build-release/RLC30.exe"
+ffmpeg = "ffmpeg"
+encoder = "EncoderApp"
+preproc = "mca-preproc"
+postproc = "mca-postproc"
+rlc = "RLC30"
 
 # Seldom Modify the Configurations Below
 
 [QP.woMCA]
-"Boxer-IrishMan-Gladiator" = [36, 40, 44, 48]
-"ChessPieces" = [37, 41, 45, 49]
-"ChessPieces-MovingCamera" = [36, 40, 44, 48]
-"NagoyaDataLeading" = [38, 43, 49, 51]
+"NagoyaDataLeading" = [36, 40, 44, 48]
 "NagoyaFujita" = [36, 40, 44, 48]
-"NagoyaOrigami" = [34, 39, 44, 49]
-"Tunnel_Train" = [35, 40, 45, 49]
+"NagoyaOrigami" = [36, 40, 44, 48]
+"Tunnel_Train" = [36, 40, 44, 48]
 "Boys" = [36, 40, 44, 48]
-"Cars" = [37, 41, 45, 49]
-"Experimenting" = [37, 41, 45, 49]
+"Cars" = [36, 40, 44, 48]
+"Experimenting" = [36, 40, 44, 48]
 "Matryoshka" = [36, 40, 44, 48]
+"Motherboard" = [36, 40, 44, 48]
 
 [QP.wMCA]
-"Boxer-IrishMan-Gladiator" = [36, 40, 44, 48]
-"ChessPieces" = [34, 37, 41, 45]
-"ChessPieces-MovingCamera" = [36, 40, 44, 48]
-"NagoyaDataLeading" = [33, 38, 44, 47]
+"NagoyaDataLeading" = [36, 40, 44, 48]
 "NagoyaFujita" = [36, 40, 44, 48]
-"NagoyaOrigami" = [31, 36, 40, 45]
-"Tunnel_Train" = [30, 35, 40, 45]
+"NagoyaOrigami" = [36, 40, 44, 48]
+"Tunnel_Train" = [36, 40, 44, 48]
 "Boys" = [36, 40, 44, 48]
-"Cars" = [34, 37, 41, 45]
-"Experimenting" = [34, 37, 41, 45]
+"Cars" = [36, 40, 44, 48]
+"Experimenting" = [36, 40, 44, 48]
 "Matryoshka" = [36, 40, 44, 48]
+"Motherboard" = [36, 40, 44, 48]
 
 [start_idx]
-"Boxer-IrishMan-Gladiator" = 0
-"ChessPieces" = 0
-"ChessPieces-MovingCamera" = 0
 "ComplexObjectMove" = 0
 "UnicornLinearCam" = 0
 "NagoyaDataLeading" = 1
@@ -82,3 +71,4 @@ rlc = "D:/MPEG/MPEG146/code/rlc/Program/cmake-build-release/RLC30.exe"
 "Experimenting" = 0
 "Tri-viewpoint" = 0
 "Matryoshka" = 0
+"Motherboard" = 0
