feat: no default QP

--- a/config/default.toml
+++ b/config/default.toml
@@ -32,26 +32,26 @@ postproc = "mca-postproc"
 rlc = "RLC30"
 
 [QP.woMCA]
-"NagoyaDataLeading" = [36, 40, 44, 48]
-"NagoyaFujita" = [36, 40, 44, 48]
-"NagoyaOrigami" = [36, 40, 44, 48]
-"Tunnel_Train" = [36, 40, 44, 48]
-"Boys" = [36, 40, 44, 48]
-"Cars" = [36, 40, 44, 48]
-"Experimenting" = [36, 40, 44, 48]
-"Matryoshka" = [36, 40, 44, 48]
-"Motherboard" = [36, 40, 44, 48]
+"NagoyaDataLeading" = []
+"NagoyaFujita" = []
+"NagoyaOrigami" = []
+"Tunnel_Train" = []
+"Boys" = []
+"Cars" = []
+"Experimenting" = []
+"Matryoshka" = []
+"Motherboard" = []
 
 [QP.wMCA]
-"NagoyaDataLeading" = [36, 40, 44, 48]
-"NagoyaFujita" = [36, 40, 44, 48]
-"NagoyaOrigami" = [36, 40, 44, 48]
-"Tunnel_Train" = [36, 40, 44, 48]
-"Boys" = [36, 40, 44, 48]
-"Cars" = [36, 40, 44, 48]
-"Experimenting" = [36, 40, 44, 48]
-"Matryoshka" = [36, 40, 44, 48]
-"Motherboard" = [36, 40, 44, 48]
+"NagoyaDataLeading" = []
+"NagoyaFujita" = []
+"NagoyaOrigami" = []
+"Tunnel_Train" = []
+"Boys" = []
+"Cars" = []
+"Experimenting" = []
+"Matryoshka" = []
+"Motherboard" = []
 
 [start_idx]
 "ComplexObjectMove" = 0
