--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "LVC-CC"
+name = "lvccc"
 version = "0.5.0"
 description = ""
 authors = [{ name = "Zhuo Tan", email = "tz23@mails.tsinghua.edu.cn" }]
@@ -17,6 +17,7 @@ packages = ["lvccc"]
 
 [tool.rye]
 managed = true
+dev-dependencies = ["pytest"]
 
 [tool.ruff]
 line-length = 120
@@ -31,3 +32,7 @@ ignore = ["E402", "E501"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+
+[tool.pytest.ini_options]
+addopts = "-q"
+testpaths = ["tests"]
