--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,8 @@ target-version = "py310"
 quote-style = "preserve"
 
 [tool.ruff.lint]
-select = ["W", "E", "F", "I", "UP", "YTT", "A", "B", "C4", "PIE", "PT", "PERF", "FURB"]
-ignore = ["E402", "E501"]
+select = ["F", "E", "W", "I", "UP", "YTT", "B", "A", "COM", "C4", "FA", "PIE", "PT", "RSE", "NPY", "PERF", "FURB"]
+ignore = ["E402", "E501", "COM812"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
