feat: update config name

--- a/config/ComplexObjectMove/mca.cfg
+++ b/config/ComplexObjectMove/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           0
-Calibration_xml    ComplexObjectMove/rlc.xml
+Calibration_xml    ComplexObjectMove/RLC.xml
 RawImage_Path      ComplexObjectMove/src/frame_%03d.png
 Output_Path        ComplexObjectMove/dst/frame#%03d.png
 start_frame        0
