--- a/config/Experimenting/mca.cfg
+++ b/config/Experimenting/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           1
-Calibration_xml    Experimenting/tlct.xml
+Calibration_xml    Experimenting/TLCT.xml
 RawImage_Path      Experimenting/src/Image%03d.bmp
 Output_Path        Experimenting/dst/frame#%03d.png
 start_frame        0
