--- a/config/Experimenting/rlc.cfg
+++ b/config/Experimenting/rlc.cfg
@@ -1,20 +1,9 @@
+pipeline           1
 viewNum            5
-rmode              1
-pmode              0
-mmode              2
-lmode              0
-Calibration_xml    Experimenting/rlc.xml
+Calibration_xml    Experimenting/RLC.xml
 RawImage_Path      Experimenting/src/Image%03d.bmp
 Output_Path        Experimenting/dst/frame#%03d
-Debayer_mode       0
-Isfiltering        0
-isCLAHE            0
-Gamma              1.0
-Lambda             0.00
-Sigma              0
-input_model        0
-output_model       0
 start_frame        0
 end_frame          0
-height             3068 
+height             3068
 width              4080
