--- a/config/Boys/tlct.cfg
+++ b/config/Boys/tlct.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Boys/tlct.xml
+Calibration_xml    Boys/TLCT.xml
 RawImage_Path      Boys/src/Image%03d.bmp
 Output_Path        Boys/dst/frame#%03d
 start_frame        0
