--- a/config/NagoyaDataLeading/tlct.cfg
+++ b/config/NagoyaDataLeading/tlct.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    NagoyaDataLeading/tlct.xml
+Calibration_xml    NagoyaDataLeading/TLCT.xml
 RawImage_Path      NagoyaDataLeading/src/NagoyaDataLeading_f%04d.png
 Output_Path        NagoyaDataLeading/dst/frame#%03d
 start_frame        1
