--- a/config/NagoyaFujita/mca.cfg
+++ b/config/NagoyaFujita/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           0
-Calibration_xml    NagoyaFujita/rlc.xml
+Calibration_xml    NagoyaFujita/RLC.xml
 RawImage_Path      NagoyaFujita/src/NagoyaFujita_f%04d.png
 Output_Path        NagoyaFujita/dst/frame#%03d.png
 start_frame        1
