--- a/config/NagoyaOrigami/rlc.cfg
+++ b/config/NagoyaOrigami/rlc.cfg
@@ -1,19 +1,8 @@
+pipeline           1
 viewNum            5
-rmode              1
-pmode              0
-mmode              2
-lmode              1
-Calibration_xml    NagoyaOrigami/rlc.xml
+Calibration_xml    NagoyaOrigami/RLC.xml
 RawImage_Path      NagoyaOrigami/src/NagoyaOrigami_f%04d.png
 Output_Path        NagoyaOrigami/dst/frame#%03d
-Debayer_mode       0
-Isfiltering        0
-isCLAHE            0
-Gamma              1.0
-Lambda             0.05
-Sigma              0
-input_model        0
-output_model       0
 start_frame        1
 end_frame          1
 height             2048
