--- a/config/Tri-viewpoint/tlct.cfg
+++ b/config/Tri-viewpoint/tlct.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Tri-viewpoint/tlct.xml
+Calibration_xml    Tri-viewpoint/TLCT.xml
 RawImage_Path      Tri-viewpoint/src/frame%03d.png
 Output_Path        Tri-viewpoint/dst/frame#%03d
 start_frame        0
