fix: ignorecase on Windows

--- a/config/Boys/mca.cfg
+++ b/config/Boys/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           1
-Calibration_xml    Boys/TLCT.xml
+Calibration_xml    Boys/tlct.xml
 RawImage_Path      Boys/src/Image%03d.bmp
 Output_Path        Boys/dst/frame#%03d.png
 start_frame        0
