--- a/config/Boys/rlc.cfg
+++ b/config/Boys/rlc.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Boys/RLC.xml
+Calibration_xml    Boys/rlc.xml
 RawImage_Path      Boys/src/Image%03d.bmp
 Output_Path        Boys/dst/frame#%03d
 start_frame        0
