--- a/config/Motherboard/tlct.cfg
+++ b/config/Motherboard/tlct.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Motherboard/TLCT.xml
+Calibration_xml    Motherboard/tlct.xml
 RawImage_Path      Motherboard/src/img_%03d.bmp
 Output_Path        Motherboard/dst/frame#%03d
 start_frame        0
