--- a/config/NagoyaDataLeading/mca.cfg
+++ b/config/NagoyaDataLeading/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           0
-Calibration_xml    NagoyaDataLeading/RLC.xml
+Calibration_xml    NagoyaDataLeading/rlc.xml
 RawImage_Path      NagoyaDataLeading/src/NagoyaDataLeading_f%04d.png
 Output_Path        NagoyaDataLeading/dst/frame#%03d.png
 start_frame        1
