--- a/config/NagoyaOrigami/mca.cfg
+++ b/config/NagoyaOrigami/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           0
-Calibration_xml    NagoyaOrigami/RLC.xml
+Calibration_xml    NagoyaOrigami/rlc.xml
 RawImage_Path      NagoyaOrigami/src/NagoyaOrigami_f%04d.png
 Output_Path        NagoyaOrigami/dst/frame#%03d.png
 start_frame        1
