--- a/config/NagoyaOrigami/rlc.cfg
+++ b/config/NagoyaOrigami/rlc.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    NagoyaOrigami/RLC.xml
+Calibration_xml    NagoyaOrigami/rlc.xml
 RawImage_Path      NagoyaOrigami/src/NagoyaOrigami_f%04d.png
 Output_Path        NagoyaOrigami/dst/frame#%03d
 start_frame        1
