--- a/config/TempleBoatGiantR32/TLCT.cfg
+++ b/config/TempleBoatGiantR32/TLCT.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    TempleBoatGiantR32/TLCT.xml
+Calibration_xml    TempleBoatGiantR32/tlct.xml
 RawImage_Path      TempleBoatGiantR32/src/frame_%03d.png
 Output_Path        TempleBoatGiantR32/dst/frame#%03d
 start_frame        0
