--- a/config/Tri-viewpoint/mca.cfg
+++ b/config/Tri-viewpoint/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           1
-Calibration_xml    Tri-viewpoint/TLCT.xml
+Calibration_xml    Tri-viewpoint/tlct.xml
 RawImage_Path      Tri-viewpoint/src/frame%03d.png
 Output_Path        Tri-viewpoint/dst/frame#%03d.png
 start_frame        0
