--- a/config/Tri-viewpoint/rlc.cfg
+++ b/config/Tri-viewpoint/rlc.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Tri-viewpoint/RLC.xml
+Calibration_xml    Tri-viewpoint/rlc.xml
 RawImage_Path      Tri-viewpoint/src/frame%03d.png
 Output_Path        Tri-viewpoint/dst/frame#%03d
 start_frame        0
