--- a/config/Tunnel_Train/mca.cfg
+++ b/config/Tunnel_Train/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           0
-Calibration_xml    Tunnel_Train/TLCT.xml
+Calibration_xml    Tunnel_Train/tlct.xml
 RawImage_Path      Tunnel_Train/src/Tunnel_Train_2c_f%04d.png
 Output_Path        Tunnel_Train/dst/frame#%03d.png
 start_frame        0
