--- a/config/ComplexObjectMove/rlc.cfg
+++ b/config/ComplexObjectMove/rlc.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    ComplexObjectMove/RLC.xml
+Calibration_xml    ComplexObjectMove/rlc.xml
 RawImage_Path      ComplexObjectMove/src/frame_%03d.png
 Output_Path        ComplexObjectMove/dst/frame#%03d
 start_frame        0
