--- a/config/Experimenting/tlct.cfg
+++ b/config/Experimenting/tlct.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Experimenting/TLCT.xml
+Calibration_xml    Experimenting/tlct.xml
 RawImage_Path      Experimenting/src/Image%03d.bmp
 Output_Path        Experimenting/dst/frame#%03d
 start_frame        0
