--- a/config/Motherboard/RLC.cfg
+++ b/config/Motherboard/RLC.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Motherboard/RLC.xml
+Calibration_xml    Motherboard/rlc.xml
 RawImage_Path      Motherboard/src/img_%03d.bmp
 Output_Path        Motherboard/dst/frame#%03d
 start_frame        0
