--- a/config/Motherboard/mca.cfg
+++ b/config/Motherboard/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           1
-Calibration_xml    Motherboard/TLCT.xml
+Calibration_xml    Motherboard/tlct.xml
 RawImage_Path      Motherboard/src/Image%d.bmp
 Output_Path        Motherboard/dst/frame#%03d.png
 start_frame        0
