--- a/config/NagoyaFujita/rlc.cfg
+++ b/config/NagoyaFujita/rlc.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    NagoyaFujita/RLC.xml
+Calibration_xml    NagoyaFujita/rlc.xml
 RawImage_Path      NagoyaFujita/src/NagoyaFujita_f%04d.png
 Output_Path        NagoyaFujita/dst/frame#%03d.png
 start_frame        1
