--- a/config/NagoyaOrigami/tlct.cfg
+++ b/config/NagoyaOrigami/tlct.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    NagoyaOrigami/TLCT.xml
+Calibration_xml    NagoyaOrigami/tlct.xml
 RawImage_Path      NagoyaOrigami/src/NagoyaOrigami_f%04d.png
 Output_Path        NagoyaOrigami/dst/frame#%03d
 start_frame        1
