--- a/config/TempleBoatGiantR32/RLC.cfg
+++ b/config/TempleBoatGiantR32/RLC.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    TempleBoatGiantR32/RLC.xml
+Calibration_xml    TempleBoatGiantR32/rlc.xml
 RawImage_Path      TempleBoatGiantR32/src/frame_%03d.png
 Output_Path        TempleBoatGiantR32/dst/frame#%03d
 start_frame        0
