--- a/config/TempleBoatGiantR32/mca.cfg
+++ b/config/TempleBoatGiantR32/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           0
-Calibration_xml    TempleBoatGiantR32/RLC.xml
+Calibration_xml    TempleBoatGiantR32/rlc.xml
 RawImage_Path      TempleBoatGiantR32/src/frame_%03d.png
 Output_Path        TempleBoatGiantR32/dst/frame#%03d.png
 start_frame        0
