--- a/config/Tunnel_Train/tlct.cfg
+++ b/config/Tunnel_Train/tlct.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Tunnel_Train/TLCT.xml
+Calibration_xml    Tunnel_Train/tlct.xml
 RawImage_Path      Tunnel_Train/src/Tunnel_Train_2c_f%04d.png
 Output_Path        Tunnel_Train/dst/frame#%03d
 start_frame        0
