--- a/config/UnicornLinearCam/mca.cfg
+++ b/config/UnicornLinearCam/mca.cfg
@@ -1,5 +1,5 @@
 pipeline           0
-Calibration_xml    UnicornLinearCam/RLC.xml
+Calibration_xml    UnicornLinearCam/rlc.xml
 RawImage_Path      UnicornLinearCam/src/frame_%03d.png
 Output_Path        UnicornLinearCam/dst/frame#%03d.png
 start_frame        0
