--- a/config/UnicornLinearCam/rlc.cfg
+++ b/config/UnicornLinearCam/rlc.cfg
@@ -1,6 +1,6 @@
 pipeline           1
 viewNum            5
-Calibration_xml    UnicornLinearCam/RLC.xml
+Calibration_xml    UnicornLinearCam/rlc.xml
 RawImage_Path      UnicornLinearCam/src/frame_%03d.png
 Output_Path        UnicornLinearCam/dst/frame#%03d
 start_frame        0
