feat: set default upsample to 4

--- a/config/Boys/tlct.cfg
+++ b/config/Boys/tlct.cfg
@@ -1,9 +1,10 @@
 pipeline           1
 viewNum            5
-Calibration_xml    Boys/tlct.xml
+Calibration_xml    Boys/rlc.xml
 RawImage_Path      Boys/src/Image%03d.bmp
 Output_Path        Boys/dst/frame#%03d
 start_frame        0
 end_frame          0
 height             3068
 width              4080
+upsample           4
